# cyber_truck

./: README.md
cyber_robt/: CMakeLists.txt  package.xml
cyber_robt/config/: cyber_truck.rviz
cyber_robt/launch/: display.launch  gazebo.launch  gazebo.launch.py  gazebo.launch.xml  ign.launch.py
cyber_robt/urdf/: cyber_robt.csv  cyber_robt.urdf.xacro  cyber_robt_base.urdf.xacro  cyber_robt_ign.urdf  ignition_plugins.xacro
cyber_robt/worlds/: classroom.sdf
fusion_odom_imu/: package.xml
navigation/: CMakeLists.txt  package.xml
navigation/config/: amcl.yaml  navigation.yaml
navigation/launch/: navigation_bringup.launch.py
navigation/maps/: classroom_map.yaml
